@@ -8,4 +8,4 @@
 # project structure.
 
 # Project target.
-target=android-7
+target=android-12
